# hack-meridian

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  Cargo.toml  README.md
backend-go/: README.md  domain.go  go.mod  go.sum  main.go  rpc.go  scval.go  scval_test.go  server.go  server_test.go
backend/src/: config.rs  domain.rs  error.rs  main.rs  routes.rs
backend/src/soroban/: mod.rs  rpc.rs  scval.rs
contracts/poap_badge/: Cargo.toml
docker/: backend-go.Dockerfile  backend.Dockerfile
frontend/: .env.example  create_styleguide.sh  index.html  package-lock.json  package.json  sync_project.sh  vite.config.ts
frontend/mvp/: index.html
frontend/pages/: index.html
frontend/scripts/: apply_stellar_shell.py  build_menu_site.py  build_mvp_gallery.py  capture_cta_styles.py  extract_stellar_ds.py  reskin_poap_to_stellar.py  scrape_poap.py
frontend/site/: about-poap-inc.html  about-the-proof-of-attendance-protocol.html  about.html  builders.html  case-studies.html  collections.html  collectors.html  community.html  docs.html  enterprise-solutions.html  gallery.html  how-to-use-poap.html  index.html  issuers.html  packages.html  poap-fun.html  sdks.html  status.html
frontend/src/: App.tsx  api.test.ts  api.ts  config.ts  contract.ts  main.tsx  theme.css  types.ts  util.ts  vite-env.d.ts  wallet-context.tsx  wallet.ts
frontend/stellar_ds_autogen/: cta_tokens.json  stellar.css  tokens.json
frontend/styleguide/: index.html
scripts/: README.md  deploy.sh  pin_ipfs.py  seed.sh
(+24 files in other folders)
